src/index.css
/* 
==========================================================================
Styles Reset
========================================================================== 
*/
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  font-family: 'Roboto', sans-serif;
}

/* initial helper style */
/* .app > div {
  margin-top: 20px;
} */

.container {
  /* text-align: center; */
}

.section {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

.section--height-fullviewport {
  height: 100vh;
}

.section-title {
  font-size: 30px;
}

.form {
  padding: 50px 20px 0;
  width: 100%;
}

.form-group {
  align-items: center;
  display: flex;
  margin-top: 25px;
  justify-content: space-between;
  width: 100%;
}

.form-input {
  font-size: 20px;
  outline: none;
  height: 40px;
  width: 50%;
}

.button {
  border: none;
  cursor: pointer;
  outline: none;
}

.button-container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.button-container .button {
  margin-right: 10px;
}

.button--red {
  background-color: #e74c3c;
  color: #fff;
}

.button--red:hover {
  background-color: #f5593d;
}

.button--size-medium {
  height: 50px;
  width: 100px;
}

.button--size-small {
  height: 50px;
  width: 50px;
}

.button--spacing-none {
  margin: 0;
}

.button--spacing-small {
  margin: 35px auto 0;
}

/* background-buttons  */
.button--search-bg {
  background: url(assets/img/search.png) no-repeat;
}

.button--edit-bg {
  background: url(assets/img/edit.png) no-repeat;
}

.button--read-bg {
  background: url(assets/img/form.png) no-repeat;
}

.button--delete-bg {
  background: url(assets/img/delete.png) no-repeat;
}

.bold {
  font-weight: 700;
}

.loader-container {
  margin-top: 25px;
}

.no-results-paragraph {
  margin-top: 25px;
}

.object-detail {
  margin-top: 15px;
}

.view-record {
  display: flex;
  justify-content: center;
}

/* 
==========================================================================
Responsive Media Queries
========================================================================== 
*/

/* Medium devices (tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  .form {
    width: 50%;
  }

  .form--big {
    width: 80%;
  }
}

/* Large devices (desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  .container {
    margin-left: auto;
    margin-right: auto;
    width: 960px;
  }

  .section-title {
    font-size: 40px;
  }

  .form {
    padding: 25px 20px;
  }

  .form-label {
    font-size: 17px;
  }
}

/* Extra large devices (large desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {

}

